testdata/invalid/invalid_op_code_10.bop
[opcode("1234")]
struct InvalidOpCode10A {}

[opcode("1234")]
struct InvalidOpCode10B {}
